# spglib

./: CMakeLists.txt
src/: CMakeLists.txt
